--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -7,6 +7,8 @@ http://www.bootstrapzero.com
 
 @import url(https://fonts.googleapis.com/css?family=Questrial);
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
+@import url(http://fonts.googleapis.com/earlyaccess/jejuhallasan.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 
 html,
 body {
@@ -15,9 +17,16 @@ body {
 }
 
 body {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    background-color: #282828;
-    color: #d3d3d3;
+    font-family: 'Nanum Pen Script', serif;
+   /*
+   background-color: #282828;
+   color: #d3d3d3;
+   */
+    
+    background-color: #ffffff;
+    color: #F71919;
+    
+    
     webkit-tap-highlight-color: #222;
 }
 
@@ -34,7 +43,7 @@ hr.light {
 }
 
 a {
-    color: #9c27b0;
+    color: #E3202D;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -42,14 +51,12 @@ a {
 
 a:hover,
 a:focus {
-    color: #9c27c1;
+    color: #ff0000;
     outline: 0;
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-}
-
+	font-family: 'Nanum Pen Script', serif;}
 p {
     font-size: 17px;
     line-height: 1.7;
@@ -61,21 +68,21 @@ p {
 }
 
 .icon-lg {
-    font-size: 50px;
-    line-height: 18px;
+    font-size: 80px;
+    line-height: 40px;
 }
 
 .bg-primary {
-    background-color: #333;
+    background-color: #ffffff;
 }
 
 .bg-dark {
-    color: #eee;
-    background-color: #222;
+    color: #e9444b;
+    background-color: #ffffff;
 }
 
 .cursive {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Nanum Pen Script', serif;
     text-transform: none;
 }
 
@@ -88,7 +95,7 @@ p {
 }
 
 .text-primary {
-    color: #9c27b0;
+    color: #3c2d35;
 }
 
 .modal-content {
@@ -111,18 +118,24 @@ footer {
     padding: 0;
 }
 
+nav {
+    float : right;
+}
+
 .navbar-default {
-    border-color: rgba(35,35,35,.05);
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    background-color: #222;
+    border-color: rgba(237,199,93,.05);
+
+    font-family:'Jeju Hallasan', serif;
+    background-color: #140010;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
 }
 
 .navbar-header > .navbar-brand {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Jeju Hallasan', serif;
     color: #9c27b0;
+    
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
@@ -131,11 +144,11 @@ footer {
 
 .navbar-header > .navbar-brand:hover,
 .navbar-header > .navbar-brand:focus {
-    color: #8b27b0;
+    color: #ff0000;
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #181818;
+    background-color: #db0303;
 }
 .navbar-default .navbar-toggle, .navbar-default .navbar-collapse {
     border-color: transparent;
@@ -151,12 +164,12 @@ footer {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #9c27b0;
+    color: #ff0011;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #9c27b0 !important;
+    color: #fe0400!important;
     background-color: transparent;
 }
 
@@ -175,7 +188,8 @@ footer {
     }
 
     .navbar-header > .navbar-brand {
-        color: rgba(255,255,255,0.7);
+
+        color: rgba(237,199,93,.05);
         padding: 19px;
     }
 
@@ -186,7 +200,8 @@ footer {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,0.8);
+
+        color: rgba(237,199,93,.05);
         padding: 20px;
         letter-spacing: 1.1px;
         text-shadow: 1px 1px 1px rgba(60,60,60,0.7);
@@ -211,7 +226,7 @@ footer {
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #8b27b0;
+        color: #ff001a;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -222,7 +237,7 @@ footer {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #9c27b0;
+        color: #ff000c;
     }
 }
 
@@ -230,10 +245,12 @@ header {
     position: relative;
     min-height: auto;
     text-align: center;
-    color: #fff;
+    color:#ffffff;
+    
     width: 100%;
-    background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+  
+    background-color: #e7e3e2;
+    background-image: url("../img/fakePic.png");
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -258,7 +275,8 @@ header .header-content .inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,0.7);
+    color: rgba(237,199,93,.05);
+    
 }
 
 #video-background {
@@ -522,3 +540,22 @@ img::-moz-selection {
     color: #fff;
     background: 0 0;
 }
+
+#video_container {
+
+  overflow: hidden;
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
+}
+
+#videobcg {
+  width: 100%;
+  height: auto;
+}
+
+
+
+
