--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -159,7 +159,7 @@ nav {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: #eee;
+    color: #e96272;
 }
 
 .navbar-default .nav > li>a:hover,
@@ -248,9 +248,10 @@ header {
     color:#ffffff;
     
     width: 100%;
+  	height: 50%;
   
-    background-color: #e7e3e2;
-    background-image: url("../img/fakePic.png");
+    background-color: #000000;
+    
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -553,7 +554,7 @@ img::-moz-selection {
 
 #videobcg {
   width: 100%;
-  height: auto;
+  height: 880px;
 }
 
 
